fix(design-qa): Fix spacing issues within Content Intro & minor bugs seen within Microsite (#341)
* fix(design-qa): address spacing issues within Content Intro and others

* fix(design-qa): add more styling fixes

* fix(design-qa): add uppercase styling to stat used in content intro

* fix(design-qa): adjust spacing between content intro and content block

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -94,11 +94,22 @@ main .section.stat-container.carousel-container div.carousel-wrapper {
     width: fit-content;
 }
 
+.carousel.image-carousel-full-width .carousel-slide img {
+    max-width: inherit;
+    width: 90px;
+    height: 90px;
+}
+
 .carousel.testimonial .carousel-slide div .figure {
     flex-direction: column;
     margin: 0 auto;
     padding-top: var(--spacer-layout-03);
     max-width: calc(var(--spacer-layout-06) * 5);
+}
+
+.carousel.testimonial .carousel-slide div .figure img {
+    width: var(--spacer-layout-05);
+    height: var(--spacer-layout-05);
 }
 
 .carousel .carousel-slide > div {
@@ -142,20 +153,6 @@ main .section.stat-container.carousel-container div.carousel-wrapper {
     width: auto;
     box-sizing: border-box;
     position: relative;
-}
-
-.carousel .carousel-slide > .figure img {
-    border-radius: 50%;
-    height: 64px;
-    width: 64px;
-    margin-bottom: 0;
-    margin-right: var(--spacer-layout-02);
-}
-
-.carousel.image-carousel-full-width .carousel-slide img {
-    max-width: inherit;
-    width: 90px;
-    height: 90px;
 }
 
 .carousel.image-carousel-full-width .carousel-slide-container {
