--- a/blocks/content-intro/content-intro.css
+++ b/blocks/content-intro/content-intro.css
@@ -1,13 +1,15 @@
-/* Section - Content Intro Checkmark */
-main .section.content-intro-checkmark > .content-intro-wrapper {
-  padding: var(--spacer-layout-06) 0;
+/* Section - Content Intro */
+main .section.content-intro-container > .content-intro-wrapper {
+  padding-top: var(--spacer-layout-06);
+  padding-bottom: var(--spacer-layout-06);
+}
+
+/* Section - Content Intro with Linkable Cards */
+main .section.content-intro-container.linkable-cards-container > .content-intro-wrapper {
+  padding-bottom: var(--spacer-layout-04);
 }
 
 /* Block - Content Intro */
-.content-intro {
-  margin-bottom: var(--spacer-layout-04);
-}
-
 .content-intro .content-intro__inner h2 {
   margin: 0;
 }
@@ -31,7 +33,8 @@ main .section.content-intro-checkmark > .content-intro-wrapper {
   margin: 0;
 }
 
-.content-intro p.content-intro__eyebrow {
+.content-intro p.content-intro__eyebrow,
+.content-intro-stat .content-intro .content-intro__col-2 h4 {
   font-family: var(--sans-serif-font-medium);
   text-transform: uppercase;
   font-size: var(--font-size-11);
@@ -50,6 +53,10 @@ main .section.content-intro-checkmark > .content-intro-wrapper {
 
 /* Block - Content Intro: Checkmark */
 .content-intro ul {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  gap: var(--gap-24);
+  width: 100%;
   margin: var(--spacer-layout-04) 0 0 0;
   padding-inline-start: 0;
 }
@@ -65,9 +72,9 @@ main .section.content-intro-checkmark > .content-intro-wrapper {
   border-radius: var(--spacer-element-09);
   width: 100%;
   min-height: var(--spacer-layout-04);
-  padding: 0 var(--spacer-element-07);
+  padding: var(--spacer-element-05) var(--spacer-element-07);
   padding-inline-start: var(--spacer-element-07);
-  margin: 0 0 var(--spacer-element-05) 0;
+  margin: 0;
 }
 
 .content-intro ul li:last-of-type {
@@ -84,6 +91,7 @@ main .section.content-intro-checkmark > .content-intro-wrapper {
   position: relative;
   vertical-align: middle;
   margin-right: var(--spacer-element-05);
+  flex-shrink: 0;
 }
 
 /* Block - Content Intro: Stat Number */
@@ -105,7 +113,8 @@ main .section.content-intro-checkmark > .content-intro-wrapper {
 
 .content-intro-stat .content-intro .content-intro__col-2 h2 {
   font-size: var(--font-size-96);
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: var(--spacer-element-05);
   line-height: 120%;
 }
 
@@ -141,13 +150,12 @@ main .section.content-intro-checkmark > .content-intro-wrapper {
 
   /* Block - Content Intro: Checkmark */
   .content-intro ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: var(--gap-24);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .content-intro ul li {
     max-width: inherit;
+    height: 100%;
   }
 
   /* Block - Content Intro: Stat Number */
@@ -168,8 +176,16 @@ main .section.content-intro-checkmark > .content-intro-wrapper {
 /* Desktop */
 @media only screen and (min-width: 1200px) {
   /* Section - Content Intro */
-  main .section.content-intro-checkmark > .content-intro-wrapper {
-    padding: var(--spacer-layout-07) 0;
+  main .section.content-intro-container > .content-intro-wrapper {
+    padding-top: var(--spacer-layout-07);
+    padding-bottom: var(--spacer-layout-07);
+  }
+
+  /* Section - Content Intro with Columns or Content */
+  main .section.content-intro-container.columns-container > .content-intro-wrapper,
+  main .section.content-intro-container.content-container > .content-intro-wrapper {
+    padding-top: var(--spacer-layout-07);
+    padding-bottom: var(--spacer-layout-06);
   }
 
   /* Block - Content Intro */
@@ -199,15 +215,15 @@ main .section.content-intro-checkmark > .content-intro-wrapper {
     margin: var(--spacer-layout-05) 0 0;
   }
 
-  .content-intro p.content-intro__eyebrow {
+  .content-intro p.content-intro__eyebrow,
+  .content-intro-stat .content-intro .content-intro__col-2 h4 {
     font-size: var(--font-size-14);
     margin: 0 0 var(--spacer-element-08) 0;
   }
 
   /* Block - Content Intro: Checkmark */
   .content-intro ul {
-    grid-template-columns: 1fr;
-    column-gap: 0;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     margin-top: 0;
   }
 
