--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,9 +1,4 @@
 /* Content */
-.block.content {
-  padding-top: var(--spacer-layout-07);
-  padding-bottom: var(--spacer-layout-07);
-}
-
 .content .content__item {
   display: flex;
   flex-direction: column;
